// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons Buttons 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 eqIpQG"
>
  <button
    className="buttoncomponent__Button-sc-1gnonws-0 hyIGIy"
    style={
      Object {
        "marginRight": 10,
      }
    }
  >
    Default
  </button>
  <button
    className="buttoncomponent__Button-sc-1gnonws-0 gfFjsb"
    disabled={true}
    style={
      Object {
        "marginRight": 10,
      }
    }
  >
    Disabled
  </button>
  <button
    className="buttoncomponent__Button-sc-1gnonws-0 EFHbI"
    style={
      Object {
        "marginRight": 10,
      }
    }
  >
    Loading
  </button>
</div>
`;

exports[`Storyshots Chat Info Chat Info 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 eqIpQG"
>
  <div
    className="chat-infocomponent__Wrapper-ichvm3-0 gJjxUW"
  >
    <div
      className="chat-infocomponent__Content-ichvm3-1 iiNxBT"
    >
      <div
        className="chat-infocomponent__ChatImage-ichvm3-2 dUiElW"
        src="https://chat-profile-images.s3.amazonaws.com/file_70280.jpg"
      />
      <div
        className="chat-infocomponent__Title-ichvm3-3 sRGlw"
      >
        Kabold сamp
        <div
          className="chat-infocomponent__Subtitle-ichvm3-4 hbgKxr"
        >
          The kaboldest camp
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Chat Info Edge Case Chat Info 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 eqIpQG"
>
  <div
    className="chat-infocomponent__Wrapper-ichvm3-0 gJjxUW"
  >
    <div
      className="chat-infocomponent__Content-ichvm3-1 iiNxBT"
    >
      <div
        className="chat-infocomponent__ChatImage-ichvm3-2 knGAPM"
        src="/favicon.png"
      />
      <div
        className="chat-infocomponent__Title-ichvm3-3 sRGlw"
      >
        Unknown Chat
        <div
          className="chat-infocomponent__Subtitle-ichvm3-4 hbgKxr"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Graphs Bar Chart 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 eqIpQG"
>
  <div
    className="daily-users-piecomponent__ChartWrapper-guyatk-0 bmwZJY"
  >
    <div
      className="recharts-responsive-container"
      id="undefined"
      style={
        Object {
          "height": 400,
          "maxHeight": undefined,
          "minHeight": undefined,
          "minWidth": undefined,
          "width": "100%",
        }
      }
    >
      <div />
    </div>
    <div
      className="daily-users-piecomponent__Legend-guyatk-1 ktiXLe"
    >
      <div
        className="daily-users-piecomponent__LegendItem-guyatk-2 iyrHMR"
      >
        <div
          className="daily-users-piecomponent__LegendCell-guyatk-3 evEBLy"
          color="#1f77b4"
        />
        <div
          className="daily-users-piecomponent__LegendText-guyatk-4 KoPTI"
        >
          user1  (62)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-guyatk-2 iyrHMR"
      >
        <div
          className="daily-users-piecomponent__LegendCell-guyatk-3 kylbFn"
          color="#ff7f0e"
        />
        <div
          className="daily-users-piecomponent__LegendText-guyatk-4 KoPTI"
        >
          user2  (52)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-guyatk-2 iyrHMR"
      >
        <div
          className="daily-users-piecomponent__LegendCell-guyatk-3 bcyfxa"
          color="#2ca02c"
        />
        <div
          className="daily-users-piecomponent__LegendText-guyatk-4 KoPTI"
        >
          user3  (30)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-guyatk-2 iyrHMR"
      >
        <div
          className="daily-users-piecomponent__LegendCell-guyatk-3 PrZwO"
          color="#d62728"
        />
        <div
          className="daily-users-piecomponent__LegendText-guyatk-4 KoPTI"
        >
          user4  (27)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-guyatk-2 iyrHMR"
      >
        <div
          className="daily-users-piecomponent__LegendCell-guyatk-3 hslvQp"
          color="#9467bd"
        />
        <div
          className="daily-users-piecomponent__LegendText-guyatk-4 KoPTI"
        >
          user5  (16)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-guyatk-2 iyrHMR"
      >
        <div
          className="daily-users-piecomponent__LegendCell-guyatk-3 jgbPDV"
          color="#8c564b"
        />
        <div
          className="daily-users-piecomponent__LegendText-guyatk-4 KoPTI"
        >
          user6  (10)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-guyatk-2 iyrHMR"
      >
        <div
          className="daily-users-piecomponent__LegendCell-guyatk-3 fyXrPg"
          color="#e377c2"
        />
        <div
          className="daily-users-piecomponent__LegendText-guyatk-4 KoPTI"
        >
          user7  (9)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-guyatk-2 iyrHMR"
      >
        <div
          className="daily-users-piecomponent__LegendCell-guyatk-3 jmCPjy"
          color="#7f7f7f"
        />
        <div
          className="daily-users-piecomponent__LegendText-guyatk-4 KoPTI"
        >
          user8  (5)
        </div>
      </div>
      <div
        className="daily-users-piecomponent__LegendItem-guyatk-2 iyrHMR"
      >
        <div
          className="daily-users-piecomponent__LegendCell-guyatk-3 jEeLTw"
          color="#bcbd22"
        />
        <div
          className="daily-users-piecomponent__LegendText-guyatk-4 KoPTI"
        >
          user9  (3)
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Graphs Pie Chart 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 eqIpQG"
>
  <div
    className="daily-users-barscomponent__ChartWrapper-wi252y-0 ypezK"
  >
    <div
      className="recharts-responsive-container"
      id="undefined"
      style={
        Object {
          "height": "100%",
          "maxHeight": undefined,
          "minHeight": undefined,
          "minWidth": undefined,
          "width": "100%",
        }
      }
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Icon Input 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 eqIpQG"
>
  <div
    className="sc-0-Inputstories__Story-sc-15acmoi-0 dQwktB"
  >
    <div>
      <div
        className="inputcomponent__Holder-sc-1hahqlg-0 ilnYNs"
      >
        <input
          className="inputcomponent__BaseInput-sc-1hahqlg-2 eVrlTW"
          value="Simple input"
        />
        <div
          className="inputcomponent__Icon-sc-1hahqlg-1 ljGYcP"
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
            />
          </svg>
        </div>
      </div>
    </div>
    <div>
      <div
        className="inputcomponent__Holder-sc-1hahqlg-0 ilnYNs"
      >
        <input
          className="inputcomponent__BaseInput-sc-1hahqlg-2 eVrlTW"
          value="Emoji 🦄"
        />
        <div
          className="inputcomponent__Icon-sc-1hahqlg-1 ljGYcP"
        >
          🐈
        </div>
      </div>
    </div>
    <div>
      <div
        className="inputcomponent__Holder-sc-1hahqlg-0 ilnYNs"
      >
        <input
          className="inputcomponent__BaseInput-sc-1hahqlg-2 cWdKPm"
          style={
            Object {
              "width": 215,
            }
          }
          value="123,43"
        />
        <div
          className="inputcomponent__Icon-sc-1hahqlg-1 ljGYcP"
        >
          $
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Simple Input 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 eqIpQG"
>
  <div
    className="inputcomponent__Holder-sc-1hahqlg-0 ilnYNs"
  >
    <input
      className="inputcomponent__BaseInput-sc-1hahqlg-2 gEFmZE"
      value="Simple input"
    />
  </div>
</div>
`;

exports[`Storyshots Spinners Spinners 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 eqIpQG"
>
  <svg
    aria-label="spinner"
    className="spinnercomponent__Svg-sc-962b50-0 dApYzm"
    style={
      Object {
        "height": 50,
        "width": 50,
      }
    }
    viewBox="25 25 50 50"
  >
    <circle
      className="spinnercomponent__Circle-sc-962b50-1 dsokAG"
      cx="50"
      cy="50"
      fill="none"
      r="20"
      strokeMiterlimit="10"
      strokeWidth={2}
    />
  </svg>
  <svg
    aria-label="spinner"
    className="spinnercomponent__Svg-sc-962b50-0 dApYzm"
    style={
      Object {
        "height": 105,
        "width": 105,
      }
    }
    viewBox="25 25 50 50"
  >
    <circle
      className="spinnercomponent__Circle-sc-962b50-1 dsokAG"
      cx="50"
      cy="50"
      fill="none"
      r="20"
      strokeMiterlimit="10"
      strokeWidth={2}
    />
  </svg>
  <svg
    aria-label="spinner"
    className="spinnercomponent__Svg-sc-962b50-0 dApYzm"
    style={
      Object {
        "height": 50,
        "width": 50,
      }
    }
    viewBox="25 25 50 50"
  >
    <circle
      className="spinnercomponent__Circle-sc-962b50-1 igIWpN"
      color="red"
      cx="50"
      cy="50"
      fill="none"
      r="20"
      strokeMiterlimit="10"
      strokeWidth={2}
    />
  </svg>
  <svg
    aria-label="spinner"
    className="spinnercomponent__Svg-sc-962b50-0 dApYzm"
    style={
      Object {
        "height": 100,
        "width": 100,
      }
    }
    viewBox="25 25 50 50"
  >
    <circle
      className="spinnercomponent__Circle-sc-962b50-1 irdQSR"
      color="green"
      cx="50"
      cy="50"
      fill="none"
      r="20"
      strokeMiterlimit="10"
      strokeWidth={2}
    />
  </svg>
</div>
`;

exports[`Storyshots Tabs Simple Tabs 1`] = `
<div
  className="preview__StoriesWrapper-sc-1cm7iba-0 eqIpQG"
>
  <div
    className="sc-1-Tabsstories__Wrapper-sc-1xyi268-0 iqNbDS"
  >
    <div
      className="tabscomponent__Wrapper-sc-11o22cv-0 qEnox"
    >
      <div
        className="tabscomponent__Inner-sc-11o22cv-1 doAXZC"
      >
        <div
          className="tabscomponent__Tab-sc-11o22cv-2 foaoBB tab active"
          onClick={[Function]}
        >
          Tab1
        </div>
        <div
          className="tabscomponent__Tab-sc-11o22cv-2 foaoBB tab"
          onClick={[Function]}
        >
          Veeeeeery Loooooong Name Tab
        </div>
        <div
          className="tabscomponent__Tab-sc-11o22cv-2 foaoBB tab"
          onClick={[Function]}
        >
          Some other tab
        </div>
        <div
          className="tabscomponent__Tab-sc-11o22cv-2 foaoBB tab"
          onClick={[Function]}
        >
          tab 4
        </div>
        <div
          className="tabscomponent__TabIndicator-sc-11o22cv-3 jJoJby"
          tabIndex={0}
          width={0}
          x={0}
        />
      </div>
    </div>
    <div
      className="sc-1-Tabsstories__Content-sc-1xyi268-1 cRmywJ"
    >
      selected 
      Tab1
       tab!
    </div>
  </div>
</div>
`;
